# HelperTipsFutebolVirtual

./: .env.example  .gitignore  CLAUDE.md  README.md  listener.py  pyproject.toml  requirements.txt  store.py
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.3-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-06-SUMMARY.md  01-07-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-dashboard/: 02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02.1-market-config/: 02.1-01-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/: 01-provision-ec2.sh  02-setup-postgres.sh  03-setup-budget-alert.sh  04-setup-backup.sh  05-setup-listener.sh  06-setup-dashboard.sh  07-setup-nginx.sh  README-deploy.md  backup-helpertips.sh
helpertips/: __init__.py  dashboard.py  db.py  list_groups.py  listener.py  parser.py  queries.py  store.py
helpertips/assets/: custom.css
helpertips/pages/: __init__.py  config.py  home.py  sinal.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_db.py  test_listener_logging.py  test_parser.py  test_queries.py  test_sinal_page.py  test_store.py
tests/fixtures/: sample_signals.txt
(+154 files in other folders)
